# back-dp2

./: .dockerignore  .env.example  .env.production  .gitignore  CONDA.md  Cevicheria_API_Collection.postman_collection.json  DEPLOY_RENDER.md  DIVISION_CUENTA_FLUJO_VALIDACION.md  DOCUMENTACION_COMPLETA.md  DOCUMENTACION_COMPLETA_INFORME.md  Dockerfile  Entregable P4 – Documento del Arquetipo Backend.docx  Entregable P4 – Documento del Arquetipo Backend.md  Historias de usuario - Hoja 1.csv  IMPLEMENTATION_FINAL_SUMMARY.md  INFORME_TECNICO_COMPLETO.md  MIGRATION_COMPLETE_REPORT.md  Makefile  POSTMAN_GUIDE.md  Procfile  QUICKSTART-CONDA.md  README-Docker.md  README.md  REFACTORING_SUMMARY.md  RENDER_DEPLOYMENT_SUMMARY.md  REPOSITORY_IMPLEMENTATION_SUMMARY.md  REPOSITORY_PATTERN_GUIDE.md  REPOSITORY_VS_DAO_COMPARISON.md  TESTS_REORGANIZATION_SUMMARY.md  WINDOWS-SETUP.md  check_endpoints.py  conda-commands.bat  create-desktop-shortcut.ps1  create_seed_data_manual.py  docker-compose.prod.yml  docker-compose.yml  ejemplos_endpoints.md  environment.yml  execute_seed_online.py  install-windows.bat  (+41 more)
FASAPI/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
FASAPI/alembic/: alembic.ini  env.py
FASAPI/app/: __init__.py  main.py
FASAPI/app/application/: __init__.py
FASAPI/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
FASAPI/app/domain/: __init__.py
FASAPI/app/infrastructure/: __init__.py
FASAPI/app/jobs/: cleaners.py
FASAPI/app/mappers/: __init__.py  mesa_mapper.py
FASAPI/app/middlewares/: __init__.py  idempotency.py  request_id.py
FASAPI/app/models/: base.py  mesa.py  pedido.py
FASAPI/app/oai/: __init__.py  cache.py  orchestrator.py
FASAPI/app/repositories/: base.py  mesa_repository.py
FASAPI/app/resources/: __init__.py  application.yml  log_config.yaml
FASAPI/app/routers/: __init__.py  auth.py  menu.py  mesas.py  pedidos.py
FASAPI/app/scheduler/: __init__.py  setup.py
FASAPI/scripts/: init_dev_db.py
FASAPI/tests/: conftest.py  test_health.py
menu-ms/: .gitignore  ARQUITECTURA_ITEMS_INGREDIENTES.md  Dockerfile  README.md  README_TESTING.md  RESUMEN_CORRECCIONES.md  __init__.py  create_peru_data_simple copy.py  create_peru_data_simple.py  debug_all_items.py  debug_all_items_final.py  debug_all_items_final_final.py  debug_all_items_final_final_final.py  debug_all_items_final_final_final_final.py  debug_all_items_final_final_final_final_final.py  debug_bebida.py  debug_bebida_conversion.py  debug_bebida_conversion_final.py  debug_bebida_conversion_final_final.py  debug_bebida_conversion_final_final_final.py  debug_bebida_conversion_final_final_final_final.py  debug_bebida_conversion_final_final_final_final_final.py  debug_bebida_model.py  debug_endpoint.py  debug_error.py  debug_final.py  debug_final_error.py  debug_final_error_final.py  debug_final_error_final_final.py  debug_final_error_final_final_final.py  debug_final_error_final_final_final_final.py  debug_get_all.py  debug_get_all_final.py  debug_item_5.py  debug_item_5_final.py  debug_item_5_final_final.py  debug_item_5_final_final_final.py  debug_item_5_final_final_final_final.py  debug_item_5_final_final_final_final_final.py  debug_items_list.py  (+55 more)
menu-ms/infrastructure/: db.py
menu-ms/tests/: __init__.py  conftest.py  test_entities.py  test_integration.py  test_use_cases.py
(+632 files in other folders)
